<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.musicplus.app.MainActivity" >

    <Button android:id="@+id/btn_record_exclude_video_audio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:onClick="onExcludeClick"
        android:text="@string/record_exclude_video_audio"/>

    <Button android:id="@+id/btn_record_include_video_audio"
        android:layout_below="@+id/btn_record_exclude_video_audio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:onClick="onIncludeClick"
        android:text="@string/record_include_video_audio"/>
    
    <Button android:id="@+id/btn_mix_audios"
        android:layout_below="@+id/btn_record_include_video_audio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:onClick="onMixAudioClick"
        android:text="@string/mix_audios"/>
</RelativeLayout>
